[package]
name        = "timeline"
version     = "0.1.0"
description = "convert Chrome timeline json into a gif"
authors     = ["Steven Sloan <stevenosloan@gmail.com>"]
repository  = "https://github.com/stevenosloan/timeline"
license     = "MIT"
build       = "build.rs"

[build-dependencies]
serde_codegen = "~0.7.4"
syntex        = "0.32.0"

[dependencies]
clap       = "~2.2.1"
serde      = "~0.7"
serde_json = "~0.7"
image      = "~0.9"
gif        = "~0.8"
encoding   = "~0.2"
regex      = "~0.1"
rustc-serialize = "~0.3"
